# trading-simulation-cpp

./: .clang-format  .clangd  .gitignore  .nvimignore  CMakeLists.txt  README.md  dbuild.sh  format.sh
inc/tradesim/: config.in.hh  utility.hh  utility_func.hh
scripts/cmake/: configure.cmake  init.cmake
src/: tradesim-sources.cmake
src/tradesim/: CMakeLists.txt  utility_func.cc
src/tradesim-consumer/: CMakeLists.txt  main.cc
src/tradesim-engine/: CMakeLists.txt  main.cc
src/tradesim-engine-request/: CMakeLists.txt  main.cc
src/tradesim-engine-socket/: CMakeLists.txt  main.cc
src/tradesim-producer/: CMakeLists.txt  main.cc
src/tradesim-simulate/: CMakeLists.txt  main.cc
tests/unit_test/: CMakeLists.txt  test_uuid.cc
